--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         </div>
     </div>
 
+
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="script.js"></script>  
 </body>
